--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,66 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorText</item>
+    </style>
+
+    <style name="LayoutHeader">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_margin">10dp</item>
+    </style>
+
+    <style name="TextHeader">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="TextParagraphTitle">
+        <item name="android:gravity">left</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
+    <style name="TextParagraph">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
+    <style name="ScrollViewPhotos">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+    <style name="ImageInScrollView">
+        <item name="android:layout_height">175dp</item>
+        <item name="android:layout_width">175dp</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="ImageHeaderIcon">
+        <item name="android:layout_height">75dp</item>
+        <item name="android:layout_width">75dp</item>
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:scaleType">centerCrop</item>
+        <item name="android:contentDescription">@string/beast_photo_description</item>
     </style>
 
 </resources>
