DatabaseHelper can select a beast by ID, and return a BeastProfile object which contains the info of a profile table row.
Profile activity selects Dusty by ID, and sets UI elements to his profile information

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -88,7 +88,7 @@
             android:text="@string/medical_history" />
 
         <TextView
-            android:id="@+id/textViewMedicalHistory"
+            android:id="@+id/textViewMedical"
             style="@style/TextParagraph"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
