set OnLongClickListeners on ImageViews which have an image. Otherwise, they are hidden (View.GONE)
On long click, you are prompted with an AlertDialog to delete a photo. If it is deleted successfully, the activity will restart to display the changes.

Activity is also restarted now if photos are added

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -45,18 +45,15 @@
 
                 <ImageButton
                     android:id="@+id/imageBeastOne"
-                    style="@style/ImageInScrollView"
-                    app:srcCompat="@drawable/cat_one" />
+                    style="@style/ImageInScrollView" />
 
                 <ImageButton
                     android:id="@+id/imageBeastTwo"
-                    style="@style/ImageInScrollView"
-                    app:srcCompat="@drawable/cat_two" />
+                    style="@style/ImageInScrollView" />
 
                 <ImageButton
                     android:id="@+id/imageBeastThree"
-                    style="@style/ImageInScrollView"
-                    app:srcCompat="@drawable/cat_three" />
+                    style="@style/ImageInScrollView" />
 
                 <ImageButton
                     android:id="@+id/imageBeastFour"
