--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#7A9E9F</color>
+    <color name="colorPrimaryDark">#4F6367</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorText">#424242</color>
+    <color name="colorText">#000000</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorLightBackground">#eff2f4</color>
+    <color name="colorBackground">#B8D8D8</color>
 </resources>
