--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,9 @@
     <style name="LayoutHeader">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:background">@color/colorLightBackground</item>
     </style>
 
     <style name="TextHeader">
@@ -21,6 +23,8 @@
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:background">@color/colorLightBackground</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
     <style name="TextParagraphTitle">
@@ -30,7 +34,10 @@
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:paddingStart">20dp</item>
+        <item name="android:paddingTop">20dp</item>
         <item name="android:typeface">normal</item>
+        <item name="android:background">@color/colorLightBackground</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
     <style name="TextParagraph">
@@ -40,20 +47,23 @@
         <item name="android:textStyle">bold</item>
         <item name="android:padding">20dp</item>
         <item name="android:typeface">normal</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:background">@color/colorLightBackground</item>
     </style>
 
     <style name="ScrollViewPhotos">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
     </style>
 
     <style name="ImageInScrollView">
         <item name="android:layout_height">175dp</item>
         <item name="android:layout_width">175dp</item>
         <item name="android:layout_margin">3dp</item>
-        <item name="android:background">@color/colorWhite</item>
         <item name="android:scaleType">centerCrop</item>
+        <item name="android:background">@color/colorBackground</item>
     </style>
 
     <style name="ImageHeaderIcon">
@@ -61,7 +71,6 @@
         <item name="android:layout_width">75dp</item>
         <item name="android:background">@color/colorWhite</item>
         <item name="android:scaleType">centerCrop</item>
-        <item name="android:contentDescription">@string/beast_photo_description</item>
     </style>
 
 </resources>
